Добавлены мобильная, планшетная и десктопная версии секции героя

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 info@devstudio.com 
             </a>  
         </li>
-        <li class="header-contacts-item list">
+        <li class="header-contacts-item tel list">
             <a class="header-tel-link link" href="tel:+380961111111">
                 <svg class="phone-icon-svg" >
                     <use href="./images/sprite.svg#icon-phone">
@@ -57,12 +57,12 @@
 </header>
 <main>
 <!--Секция герой-->
-<!-- <section class="hero">
+<section class="hero">
     <div class="hero-block">
     <h1 class="hero-title">Эффективные решения <br/> для вашего бизнеса</h1>
     <button data-modal-open type="button" class="hero-btn modal-btn" >Заказать услугу</button>
     </div>
-</section> -->
+</section>
 <!--Преимущества-->
 <!-- <section class="advantage section">
     <div class="container">
@@ -106,7 +106,7 @@
         </li>
     </ul>
 </div>
-</section> -->
+</section>-->
 <!--Напраления работы-->
 <!-- <section class="work-direction section">
     <div class="container">
