Добавлено оформление модальной формы для мобильной, планшетной и десктопной версии

--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
     </form>
 </div>
 </div>
-</footer>
+</footer> -->
 <div data-modal class="backdrop is-hidden">
     <form action="#" class="modal-form">
         <h2 class="modal-form-title">Оставьте свои данные, мы вам перезвоним</h2>
@@ -460,7 +460,7 @@
         <button data-modal-close type="submit" class="modal-form-btn modal-btn" >Отправить</button>
     </form>
 </div> 
-<script src="./js/modal.js"></script> -->
+<script src="./js/modal.js"></script>
 <script src="./js/menu.js"></script>
 </body>
 </html>
