--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 </div>
 </section>
 <!--Напраления работы-->
-<!-- <section class="work-direction section">
+<section class="work-direction section">
     <div class="container">
     <h2 class="work-direction-title">Чем мы занимаемся</h2>
     <ul class="work-direction-list">
@@ -126,7 +126,7 @@
         </li>
     </ul>
 </div>
-</section> -->
+</section>
 <!--Команда-->
 <!-- <section class="team section">
     <div class="container">
