--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 </div>
 </section>
 <!--Команда-->
-<!-- <section class="team section">
+<section class="team section">
     <div class="container">
     <h2 class="team-title">Наша команда</h2>
     <ul class="team-list">
@@ -290,7 +290,7 @@
         </li>
     </ul>
 </div>
-</section> -->
+</section>
 <!--Клиенты-->
 <!-- <section class="clients section">
     <div class="container">
