--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
 <!--Секция герой-->
 <section class="hero">
     <div class="hero-block">
-    <h1 class="hero-title">Эффективные решения <br/> для вашего бизнеса</h1>
+    <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
     <button data-modal-open type="button" class="hero-btn modal-btn" >Заказать услугу</button>
     </div>
 </section>
 <!--Преимущества-->
-<section class="advantage section">
+<!-- <section class="advantage section">
     <div class="container">
     <h2 class="visually-hidden">Наши преимущества</h2>
     <ul class="advantage-list">
@@ -106,9 +106,9 @@
         </li>
     </ul>
 </div>
-</section>
+</section> -->
 <!--Напраления работы-->
-<section class="work-direction section">
+<!-- <section class="work-direction section">
     <div class="container">
     <h2 class="work-direction-title">Чем мы занимаемся</h2>
     <ul class="work-direction-list">
@@ -126,9 +126,9 @@
         </li>
     </ul>
 </div>
-</section>
+</section> -->
 <!--Команда-->
-<section class="team section">
+<!-- <section class="team section">
     <div class="container">
     <h2 class="team-title">Наша команда</h2>
     <ul class="team-list">
@@ -290,7 +290,7 @@
         </li>
     </ul>
 </div>
-</section>
+</section> -->
 <!--Клиенты-->
 <!-- <section class="clients section">
     <div class="container">
