--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </div>
 </section>
 <!--Преимущества-->
-<!-- <section class="advantage section">
+<section class="advantage section">
     <div class="container">
     <h2 class="visually-hidden">Наши преимущества</h2>
     <ul class="advantage-list">
@@ -106,7 +106,7 @@
         </li>
     </ul>
 </div>
-</section> -->
+</section>
 <!--Напраления работы-->
 <!-- <section class="work-direction section">
     <div class="container">
