Добавлены стили адаптивной верстки для секции клинеты, футера

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 </div>
 </section>
 <!--Напраления работы-->
-<!-- <section class="work-direction section">
+<section class="work-direction section">
     <div class="container">
     <h2 class="work-direction-title">Чем мы занимаемся</h2>
     <ul class="work-direction-list">
@@ -126,9 +126,9 @@
         </li>
     </ul>
 </div>
-</section> -->
+</section>
 <!--Команда-->
-<!-- <section class="team section">
+<section class="team section">
     <div class="container">
     <h2 class="team-title">Наша команда</h2>
     <ul class="team-list">
@@ -290,13 +290,13 @@
         </li>
     </ul>
 </div>
-</section> -->
+</section>
 <!--Клиенты-->
-<!-- <section class="clients section">
+<section class="clients section">
     <div class="container">
     <h2 class="clients-title">Постоянные клиенты</h2>
     <ul class="clients-list">
-        <li class="clietnts-list-item list">
+        <li class="clients-list-item list">
             <a class="clients-list-link" href="" target="_blank" aria-label="Логотип компании Я и Ко">
                 <svg class="clients-icon" width="44.27" height="49.23">
                     <use href="./images/sprite.svg#icon-company-logo-1">
@@ -304,7 +304,7 @@
                 </svg>
             </a>
         </li>
-        <li class="clietnts-list-item list">
+        <li class="clients-list-item list">
             <a class="clients-list-link" href="" target="_blank" aria-label="Логотип компании Теглайн">
                 <svg class="clients-icon" width="40" height="52">
                     <use href="./images/sprite.svg#icon-company-logo-2">
@@ -312,7 +312,7 @@
                 </svg>
             </a>
         </li>
-        <li class="clietnts-list-item list">
+        <li class="clients-list-item list">
             <a class="clients-list-link" href="" target="_blank" aria-label="Логотип компании Кампани">
                 <svg class="clients-icon" width="41" height="42.6">
                     <use href="./images/sprite.svg#icon-company-logo-3">
@@ -320,7 +320,7 @@
                 </svg>
             </a>
         </li>
-        <li class="clietnts-list-item list">
+        <li class="clients-list-item list">
             <a class="clients-list-link" href="" target="_blank" aria-label="Логотип компании Фостер Петерс">
                 <svg class="clients-icon" width="79.66" height="42.02">
                     <use href="./images/sprite.svg#icon-company-logo-4">
@@ -328,7 +328,7 @@
                 </svg>
             </a>
         </li>
-        <li class="clietnts-list-item list">
+        <li class="clients-list-item list">
             <a class="clients-list-link" href="" target="_blank" aria-label="Логотип компании Брэнд">
                 <svg class="clients-icon" width="59" height="47">
                     <use href="./images/sprite.svg#icon-company-logo-5">
@@ -336,7 +336,7 @@
                 </svg>
             </a>
         </li>
-        <li class="clietnts-list-item list">
+        <li class="clients-list-item list">
             <a class="clients-list-link" href="" target="_blank" aria-label="Логотип компании Тэг Лайн">
                 <svg class="clients-icon" width="88.48" height="45.44">
                     <use href="./images/sprite.svg#icon-company-logo-6">
@@ -349,9 +349,9 @@
 </section>
 </main>
 <footer class="footer">
-  <div class="container"> -->
+  <div class="container">
     <!--Контакты-->
-<!-- <div class="contacts">
+<div class="footer-box contacts">
     <a class="logo-footer link" href="./index.html"><span class="logo-footer-item">Web</span>Studio</a>
     <address class="contacts-block">
         <ul class="contacts-block-list">
@@ -366,9 +366,9 @@
             </li>
         </ul>
     </address>
-</div> -->
+</div>
 <!--Ссылки на соцсети-->
-<!-- <div class="social-links-block">
+<div class="footer-box social-links-block">
     <b class="social-links-block-text">Присоединяйтесь</b>
     <ul class="footer-list-link">
         <li class="footer-socail-list-item list">
@@ -400,9 +400,9 @@
             </a>
         </li>
     </ul>  
-</div> -->
+</div>
 <!--Форма подписки-->
-<!-- <div class="contact-form-wrapper">
+<div class="footer-box contact-form-wrapper">
     <form class="contact-form" action="#">
         <b class="contact-form-title">Подпишитесь на рассылку</b>
         <div class="contact-form-block">
@@ -417,7 +417,7 @@
     </form>
 </div>
 </div>
-</footer> -->
+</footer>
 <div data-modal class="backdrop is-hidden">
     <form action="#" class="modal-form">
         <h2 class="modal-form-title">Оставьте свои данные, мы вам перезвоним</h2>
