Добавлены стили для страницы портфолио.

--- a/portfolio.html
+++ b/portfolio.html
@@ -21,10 +21,10 @@
     <nav class="navigation">  
     <ul class="navigation-list">
         <li class="navigation-list-item list">
-            <a class="navigation-list-link selected link" href="./index.html" aria-label="Переход на главную страницу сайта">Студия</a>
+            <a class="navigation-list-link link" href="./index.html" aria-label="Переход на главную страницу сайта">Студия</a>
         </li>
         <li class="navigation-list-item list">
-            <a class="navigation-list-link link" href="./portfolio.html" aria-label="Переход на страницу портфолио">Портфолио</a>
+            <a class="navigation-list-link selected link" href="./portfolio.html" aria-label="Переход на страницу портфолио">Портфолио</a>
         </li>
         <li class="navigation-list-item list">
             <a class="navigation-list-link link" href="" aria-label="Переход на страницу контактов">Контакты</a>
@@ -83,7 +83,7 @@
              <li class="work-examples-item list">
                  <a class="work-examples-item-link link" href="">
                     <div class="work-examples-wrapper"> 
-                    <img class="work-examples-item-link-image" src="./images/works/work-1.jpg" alt="Сайт Технокряк" width="370" height="294">
+                    <img class="work-examples-item-link-image" src="./images/works/work-1.jpg" alt="Сайт Технокряк">
                      <p class="work-examples-desc">Технокряк это современная площадка распространения коронавируса.
                         Компании используют эту платформу для цифрового шпионажа 
                         и атак на защищённые сервера конкурентов.</p>
@@ -98,7 +98,7 @@
              <li class="work-examples-item list"> 
                  <a class="work-examples-item-link link" href="">
                     <div class="work-examples-wrapper"> 
-                     <img class="work-examples-item-link-image" src="./images/works/work-2.jpg" alt="Постер с баскетболистами" width="370" height="294">
+                     <img class="work-examples-item-link-image" src="./images/works/work-2.jpg" alt="Постер с баскетболистами">
                      <p class="work-examples-desc">Технокряк это современная площадка распространения коронавируса.
                         Компании используют эту платформу для цифрового шпионажа 
                         и атак на защищённые сервера конкурентов.</p>
@@ -182,7 +182,7 @@
              <li class="work-examples-item list">
                  <a class="work-examples-item-link link" href="">
                     <div class="work-examples-wrapper">
-                     <img class="work-examples-item-link-image"  src="./images/works/work-8.jpg" alt="Ярлык с буквами" width="370" height="294">
+                     <img class="work-examples-item-link-image"  src="./images/works/work-8.jpg" alt="Ярлык с буквами">
                      <p class="work-examples-desc">Технокряк это современная площадка распространения коронавируса.
                         Компании используют эту платформу для цифрового шпионажа 
                         и атак на защищённые сервера конкурентов.</p>
