--- a/index.html
+++ b/index.html
@@ -133,7 +133,15 @@
     <h2 class="team-title">Наша команда</h2>
     <ul class="team-list">
         <li class="team-list-item list">
-            <img class="team-list-item-image" src="./images/team/teamate-1.jpg" alt="Фото Николая Кучеренко" width="270" height="260">
+            <picture>
+                <source srcset="./images/team/teamate-1-desk.jpg 1x, ./images/team/teamate-1-desc@2x.jpg 2x"
+                  media="(min-width: 1200px)">
+                  <source srcset="./images/team/teamate-1-tablet.jpg 1x, ./images/team/teamate-1-tablet@2x.jpg 2x"
+                  media="(max-width:1199px)">
+                  <source srcset="./images/team/teamate-1-mob.jpg 1x, ./images/team/teamate-1-mob@2x.jpg 2x"
+                  media="(max-width: 767px)">
+                <img src="./images/team/teamate-1-mob.jpg" alt="Фото Николая Кучеренко" class="team-list-item-image">
+              </picture>
             <h3 class="team-list-item-name">Игорь Демьяненко</h3>
             <p class="team-list-item-position" lang="en">Product Designer</p>
             <ul class="social-list">
